fix: Sidebar and navbar UX on mobile

--- a/frappe/public/js/frappe/ui/toolbar/components/sidebar.scss
+++ b/frappe/public/js/frappe/ui/toolbar/components/sidebar.scss
@@ -36,7 +36,7 @@ $dropDownBg: #e3e3e3;
 		width: 100%;
 		height: 100vh;
 		padding-bottom: 50px;
-		z-index: 999;
+		z-index: 9999;
 		transition: 0.3s width;
 		box-shadow: 1px 0 0 0 #e6ebf1;
 		&.rtl {
@@ -48,7 +48,7 @@ $dropDownBg: #e3e3e3;
 			padding-top: 45px;
 			width: 100%;
 			height: 100%;
-			overflow: hidden visible;
+			overflow-y: auto;
 			scrollbar-width: none;
 		}
 		& > .vsm-list::-webkit-scrollbar {
