--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -7,6 +7,7 @@
 }
 
 .navbar {
+	z-index: 99999;
 	a {
 		font-size: 12px;
 		font-weight: bold;
@@ -271,4 +272,8 @@
 .navbar-default .navbar-nav > li > a,
 .navbar-default .navbar-brand {
 	color: @text-muted;
+}
+.navbar-brand.visible-xs,
+.navbar-brand.visible-sm {
+	font-size: 10px;
 }
